# send_directory_dat

./: Makefile  README.md  config.h  config.h.in~  config.status  configure  configure.ac  configure.scan  gitignore
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
sendat-1.0/: Makefile  config.h.in  config.status  configure  configure.ac
sendat-1.0/src/: Makefile  Makefile.am  sendat  sendat.c  sendat.conf  sendat.sh.in
sendat-1.0/src/.deps/: sendat.Po
src/: Makefile  Makefile.am  Makefile.in  config.h  getenv_test.c  gt  sendat  sendat.c  sendat.conf  sendat.conf.in  sendat.sh  sendat.sh.in
src/.deps/: sendat.Po
